--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -50,7 +50,7 @@ publishMods {
 processResources {
     inputs.property "version", project.version
 
-    filesMatching("META-INF/mods.toml") {
+    filesMatching("META-INF/neoforge.mods.toml") {
         expand "version": project.version
     }
 }
